tests/test_input_files/good/test_good_array_34.punkt
main {
	const A = alloc [int] (2).
	println A[-999].
}
