tests/test_input_files/bad/test_bad_array_11.punkt
main {
	const A = alloc int (2).
}
